# cleany

./: .gitignore  README.md  compile.py  pyproject.toml
.github/workflows/: cleany.yml
.tests/: test_base.py
.tests/fixtures/: post-clean-emojis-no-ruff.py  post-clean-js.js  post-clean-nuke-emojis-only.py  post-clean-nuke-no-ruff.py  pre-clean-js.js
src/clean_comments/: __init__.py  cli.py
src/cleany/: __init__.py  cleany.py  cli.py
tests/: test_base.py
tests/fixtures/: post-clean-emojis.py  post-clean-nuke.py  pre-clean-emojis.py  pre-clean-nuke.py
