[project]
name = "cleany"
version = "0.0.3"
description = "A CLI tool to clean up your Python comments"
readme = "README.md"
authors = [{name = "Ben Weddle", email = "ben.weddle@gmail.com"}]
maintainers = [{name = "Ben Weddle", email = "ben.weddle@gmail.com"}]
requires-python = ">=3.10"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]

dependencies = [
"regex",
"pytest",
"ruff",
"pydantic"
]

[project.urls]
Repository = "https://pointlessapi.com"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cleany*"]

[project.scripts]
cleany = "cleany.cli:main"

[tool.ruff.format]
quote-style = "preserve"