[project]
name = "cleany"
version = "0.2.8"
description = "A CLI tool to clean up your source files"
license = {file = "LICENSE.txt"}
readme = "README.md"
authors = [{name = "Ben Weddle", email = "ben.weddle@gmail.com"}]
maintainers = [{name = "Ben Weddle", email = "ben.weddle@gmail.com"}]
requires-python = ">=3.10"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]

dependencies = [
"regex",
"pytest",
"ruff",
"pydantic"
]

[project.urls]
Repository = "https://github.com/weddleben/cleany"
Issues = "https://github.com/weddleben/cleany/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = ["LICENSE.txt"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cleany*"]

[project.scripts]
cleany = "cleany.cli:main"

[tool.ruff.format]
quote-style = "preserve"

[tool.pytest.ini_options]
testpaths = ".tests"